--- a/Data/Theory/Probability.html
+++ b/Data/Theory/Probability.html
@@ -12,7 +12,7 @@
         Тогда они заметили первые закономерности случайных событий на примере бросания костей и
         сформулировали теорию вероятностей.</p>
         <p>Когда мы кидаем монетку, то не можем точно сказать, что выпадет: орел или решка.</p>
-        <p><img src="Images/5fd3c509c42ab704419991 (1).png" height="200"/> Но если подкидывать монету много раз —
+        <p><img src="Data/Images/Money.png" height="200"/> Но если подкидывать монету много раз —
             окажется, что каждая сторона выпадает примерно
             равное количество раз. Из чего можно сформулировать вероятность: 50% на 50%, что выпадет «орел» или «решка».</p>
         <p><b><font color="#414141">Теория вероятностей</font></b> — это раздел математики, который изучает
@@ -24,7 +24,7 @@
         <p><b><font color="#414141">Событие</font></b> — это базовое понятие теории вероятности. События бывают
             достоверными, невозможными и случайными.</p>
         <p><b><font color="#616161">Достоверным</font></b> является событие, которое в результате испытания
-            обязательно произойдет. Например,камень упадет вниз.</p>
+            обязательно произойдет. Например, камень упадет вниз.</p>
         <p><b><font color="#616161">Невозможным</font></b> является событие, которое заведомо не произойдет в результате
             испытания. Например, камень при падении улетит вверх.</p>
         <p>Случайным называется событие, которое в результате испытания может произойти, а может не произойти. Например,
