Practice ui change

--- a/Data/Theory/Probability.html
+++ b/Data/Theory/Probability.html
@@ -8,67 +8,92 @@
     <h1 align="center">Вероятность</h1>
     <h2>Основные понятия</h2>
     <font size="4">
-        <p>Французские математики Блез Паскаль и Пьер Ферма анализировали азартные игры и исследовали прогнозы выигрыша.
+        <p align="justify">Французские математики Блез Паскаль и Пьер Ферма анализировали азартные игры и исследовали прогнозы выигрыша.
         Тогда они заметили первые закономерности случайных событий на примере бросания костей и
         сформулировали теорию вероятностей.</p>
-        <p>Когда мы кидаем монетку, то не можем точно сказать, что выпадет: орел или решка.</p>
-        <p><img src="Data/Images/Money.png" height="200"/> Но если подкидывать монету много раз —
-            окажется, что каждая сторона выпадает примерно
+        <p><img src="Money.png" height="200" style="float: left; clear: none;"/> Когда мы кидаем монетку, то не можем точно сказать, что выпадет: орел или решка.</p>
+        <p> Но если подкидывать монету много раз — окажется, что каждая сторона выпадает примерно
             равное количество раз. Из чего можно сформулировать вероятность: 50% на 50%, что выпадет «орел» или «решка».</p>
-        <p><b><font color="#414141">Теория вероятностей</font></b> — это раздел математики, который изучает
+        <p align="justify"><b><font color="#414141">Теория вероятностей</font></b> — это раздел математики, который изучает
             закономерности случайных явлений:
             случайные события, случайные величины, их свойства и операции над ними.</p>
     </font>
     <h2>Событие и виды событий</h2>
     <font size="4">
-        <p><b><font color="#414141">Событие</font></b> — это базовое понятие теории вероятности. События бывают
+        <p align="justify"><b><font color="#414141">Событие</font></b> — это базовое понятие теории вероятности. События бывают
             достоверными, невозможными и случайными.</p>
-        <p><b><font color="#616161">Достоверным</font></b> является событие, которое в результате испытания
-            обязательно произойдет. Например, камень упадет вниз.</p>
-        <p><b><font color="#616161">Невозможным</font></b> является событие, которое заведомо не произойдет в результате
+        <p align="justify"><b><font color="#616161">Достоверным</font></b> является событие, которое в результате испытания
+            обязательно произойдет. Например,камень упадет вниз.</p>
+        <p align="justify"><b><font color="#616161">Невозможным</font></b> является событие, которое заведомо не произойдет в результате
             испытания. Например, камень при падении улетит вверх.</p>
-        <p>Случайным называется событие, которое в результате испытания может произойти, а может не произойти. Например,
+        <p align="justify">Случайным называется событие, которое в результате испытания может произойти, а может не произойти. Например,
             из колоды карт вытащили туза.</p>
-        <p>Обычно события обозначают большими латинскими буквами. Например, А — событие, при котором из колоды вытащили
+        <p align="justify">Обычно события обозначают большими латинскими буквами. Например, А — событие, при котором из колоды вытащили
             туза, D — событие, при котором из колоды вытащили семерку.</p>
-        <p>Несовместными называются события, в которых появление одного из событий исключает появление другого
+        <p align="justify">Несовместными называются события, в которых появление одного из событий исключает появление другого
             (при условии одного и того же испытания). Простейшим примером несовместных событий является пара
             противоположных событий. Событие, противоположное данному, обычно обозначается той же латинской буквой
             с черточкой вверху. Например:</p>
-        <p>A0 — в результате броска монеты выпадет орел; <br> Ā0 — в результате броска монеты выпадет решка.</p>
-        <p><b><font color="#414141">Полная группа событий</font></b> — это множество несовместных событий, среди которых в результате отдельно
+        <p align="justify">A0 — в результате броска монеты выпадет орел; <br> Ā0 — в результате броска монеты выпадет решка.</p>
+        <p align="justify"><b><font color="#414141">Полная группа событий</font></b> — это множество несовместных событий, среди которых в результате отдельно
             взятого испытания обязательно появится одно из этих событий.</p>
     </font>
     <h2>Алгебра событий</h2>
     <font size="4">
-        <p>Операция сложения событий означает логическую связку ИЛИ, а операция умножения событий — логическую связку И.</p>
+        <p align="justify">Операция сложения событий означает логическую связку ИЛИ, а операция умножения событий — логическую связку И.</p>
     </font>
     <h3>Сложение событий</h3>
     <font size="4">
-        <p>Суммой двух событий A и B называется событие A+B, которое состоит в том, что наступит или событие A, или
+        <p align="justify">Суммой двух событий A и B называется событие A+B, которое состоит в том, что наступит или событие A, или
         событие B, или оба события одновременно. В том случае, если события несовместны, последний вариант
         отпадает, то есть может наступить или событие A, или событие B.</p>
-        <p>Правило распространяется и на большее количество слагаемых, например, событие A1 + A2 + A3 + A4 + A5
+        <p align="justify">Правило распространяется и на большее количество слагаемых, например, событие A1 + A2 + A3 + A4 + A5
             состоит в том, что произойдет хотя бы одно из событий A1, A2, A3, A4, A5, а если события несовместны —
             то одно и только одно событие из этой суммы: или событие A1, или событие A2, или событие A3, или
             событие A4, или событие A5.</p>
-
+        <p>Примеров масса:</p>
+        <p>Событие Ā<sub>5</sub> = A<sub>1</sub> + A<sub>2</sub> + A<sub>3</sub> + A<sub>4</sub> + A<sub>6</sub>
+            (при броске игральной кости не выпадет 5 очков) состоит в том, что выпадет или 1, или 2, или 3, или 4, или 6 очков.</p>
+        <p>Событие A<sub>1,2</sub> = A<sub>1</sub> + A<sub>2</sub> (выпадет не более двух очков) состоит в том, что
+            появится 1 или 2 очка.</p>
+        <p>Событие A<sub>ч</sub> = A<sub>2</sub> + A<sub>4</sub> + A<sub>6</sub> (будет чётное число очков) состоит в том, что выпадет или 2 , или 4 , или 6 очков.</p>
     </font>
     <h3>Умножение событий</h3>
     <font size="4">
-        <p>Произведением двух событий A И B называют событие AB, которое состоит в совместном появлении этих событий.
+        <p align="justify">Произведением двух событий A И B называют событие AB, которое состоит в совместном появлении этих событий.
             Иными словами, умножение AB означает, что при некоторых обстоятельствах наступит и событие A, и событие B.
             Аналогичное утверждение справедливо и для большего количества событий: например, произведение A1A2A3 … A10
             подразумевает, что при определенных условиях произойдет и событие A1, и событие A2,
             и событие A3,..., и событие A10.</p>
-        <p>Рассмотрим испытание, в котором подбрасываются две монеты, и следующие события:</p>
-        <p>A1 — на 1-й монете выпадет орел; <br> Ā1 — на 1-й монете выпадет решка; <br> A2 — на 2-й монете
+        <p align="justify">Рассмотрим испытание, в котором подбрасываются две монеты, и следующие события:</p>
+        <p align="justify">A1 — на 1-й монете выпадет орел; <br> Ā1 — на 1-й монете выпадет решка; <br> A2 — на 2-й монете
             выпадет орел; <br> Ā2 — на 2-й монете выпадет решка.</p>
-        <p>Тогда:</p>
-        <p>событие A1A1 состоит в том, что на обеих монетах (на 1-й и на 2-й) выпадет орел; <br> событие Ā2Ā2
+        <p align="justify">Тогда:</p>
+        <p align="justify">событие A1A1 состоит в том, что на обеих монетах (на 1-й и на 2-й) выпадет орел; <br> событие Ā2Ā2
             состоит в том, что на обеих монетах (на 1-й и на 2-й) выпадет решка;  <br> событие A1Ā2 состоит в том,
             что на 1-й монете выпадет орел и на 2-й монете решка;  <br> событие Ā1A2 состоит в том, что на 1-й монете
             выпадет решка и на 2-й монете орел.</p>
+    </font>
+    <h2>Классическое определение и формула вероятности</h2>
+    <font size="4">
+        <p align="justify">Вероятностью события A в некотором испытании называют отношение:</p>
+        <p>P(A) = m/n, где n — общее число всех равновозможных, элементарных исходов этого испытания, <br>
+            а m — количество элементарных исходов, благоприятствующих событию A.</p>
+        <p>Свойства вероятности:</p>
+        <p>Вероятность достоверного события равна единице. <br> Вероятность невозможного события равна нулю. <br>
+            Вероятность случайного события есть положительное число, заключенное между нулем и единицей. <br>
+            Таким образом, вероятность любого события удовлетворяет двойному неравенству 0 ≤ P(A) ≤ 1.</p>
+    </font>
+    <h2>Как решать задачи по теории вероятности</h2>
+    <font size="4">
+        <p>Пример. В пакете 15 конфет: 5 с молочным шоколадом и 10 — с горьким. Какова вероятность вынуть из
+            пакета конфету с белым шоколадом?</p>
+        <p>Как рассуждаем:</p>
+        <p>Так как в пакете нет конфет с белым шоколадом, то m = 0, n = 15. Следовательно, искомая вероятность
+            равна нулю: <br> P = 0/15 = 0
+            <br>
+            Неприятная новость для любителей белого шоколада: в этом примере событие «вынуть конфету с белым
+            шоколадом» — невозможное. <br> Ответ: 0.</p>
     </font>
 </body>
 </html>
