--- a/Data/Practice/Work/W_1.html
+++ b/Data/Practice/Work/W_1.html
@@ -7,7 +7,8 @@
 <body>
     <font size="4">
         <p>Бак наполняется двумя трубами за 2 ч 55 мин. Первая труба может наполнить его на 2 ч быстрее, чем вторая.
-            За какое время каждая труба, действуя отдельно, может наполнить бак?</p>
+            За какое время каждая труба, действуя отдельно, может наполнить бак?
+            Запишите в ответ в порядке возрастания (слитно)</p>
     </font>
 </body>
 </html>
