--- a/Data/Practice/Work/W_2.html
+++ b/Data/Practice/Work/W_2.html
@@ -7,7 +7,8 @@
 <body>
     <font size="4">
         <p>Двое рабочих, работая вместе, могут оклеить комнату обоями за 6 ч. За сколько часов может оклеить комнату
-            каждый, если первый это сделает на 5 ч быстрее второго?</p>
+            каждый, если первый это сделает на 5 ч быстрее второго?
+            Запишите в ответ в порядке возрастания (слитно)</p>
     </font>
 </body>
 </html>
