--- a/Data/Practice/Work/W_5.html
+++ b/Data/Practice/Work/W_5.html
@@ -8,7 +8,8 @@
     <font size="4">
         <p> На двух копировальных машинах, работающих одновременно, можно сделать копию пакета документов за 10 мин.
             За какое время можно выполнить эту работу на каждой машине в отдельности, если известно, что на первой
-            машине ее можно сделать на 15 мин быстрее, чем на второй?</p>
+            машине ее можно сделать на 15 мин быстрее, чем на второй?
+            Запишите в ответ в порядке возрастания (слитно)</p>
     </font>
 </body>
 </html>
