--- a/Data/Theory/Probability.html
+++ b/Data/Theory/Probability.html
@@ -11,7 +11,7 @@
         <p align="justify">Французские математики Блез Паскаль и Пьер Ферма анализировали азартные игры и исследовали прогнозы выигрыша.
         Тогда они заметили первые закономерности случайных событий на примере бросания костей и
         сформулировали теорию вероятностей.</p>
-        <p><img src="Money.png" height="200" style="float: left; clear: none;"/> Когда мы кидаем монетку, то не можем точно сказать, что выпадет: орел или решка.</p>
+        <p><img src="Data/Images/Probability_Images/Money.png" height="200" style="float: left; clear: none;"/> Когда мы кидаем монетку, то не можем точно сказать, что выпадет: орел или решка.</p>
         <p> Но если подкидывать монету много раз — окажется, что каждая сторона выпадает примерно
             равное количество раз. Из чего можно сформулировать вероятность: 50% на 50%, что выпадет «орел» или «решка».</p>
         <p align="justify"><b><font color="#414141">Теория вероятностей</font></b> — это раздел математики, который изучает
