--- a/Data/Theory/Tasks.html
+++ b/Data/Theory/Tasks.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <style type="text/css">
         p {
-        font-size:18px;
+        font-size:20px;
       }
     </style>
 </head>
@@ -35,28 +35,28 @@
         скорости; <br> -перемещение в гору и обратно.</p>
     <p style="color: #ffd230;">Формула 1</p>
     <p> В процессе решения задач на движение часто используют главную формулу: <br>
-        <img src="Images/Tasks/1.png" height="40" width="100"> <br> Здесь V является скоростью движения,
+        <img src="Data/Images/Tasks/1.png" height="40" width="100"> <br> Здесь V является скоростью движения,
         S обозначает путь, а t определяется, как время.</p>
     <p style="color: #ffd230;">Формула 2</p>
-    <p>Скорость определяется по следующей формуле: <br> <img src="Images/Tasks/2.png" height="50" width="70"></p>
+    <p>Скорость определяется по следующей формуле: <br> <img src="Data/Images/Tasks/2.png" height="50" width="70"></p>
     <p style="color: #ffd230;">Формула 3</p>
-    <p>Формула для времени: <br> <img src="Images/Tasks/3.png" height="50" width="70"></p>
+    <p>Формула для времени: <br> <img src="Data/Images/Tasks/3.png" height="50" width="70"></p>
     <p>Движение в одном направлении (два варианта): <br> По условиям задачи некоторые тела могут двигаться в одинаковом
-        направлении. При этом возможно два случая: <br> <img src="Images/Tasks/4.png"></p>
+        направлении. При этом возможно два случая: <br> <img src="Data/Images/Tasks/4.png"></p>
     <p style="color: #ffd230;">Пример 1</p>
     <p style="background: #fff28e;">Предположим, что водитель двигается со скоростью 60 км/ч, чтобы успеть на работу.
         Его коллега на автомобиле едет со скоростью 85 км/ч. Первый водитель начал свой путь на расстоянии от второго
         в 15 км. Попробуем вычислить время, которое потребуется второму водителю, чтобы догнать первого, при условии,
         что они выехали в одно и то же время.</p>
-    <p>Подставим значения в формулу, получим: <br> <img src="Images/Tasks/5.png"></p>
+    <p>Подставим значения в формулу, получим: <br> <img src="Data/Images/Tasks/5.png"></p>
     <p style="color: #ffd230;">Пример 2</p>
     <p style="background: #fff28e;">Рассмотрим другой пример. Задержка поезда в пути составила 12 мин. После этого поезд
         преодолел расстояние 60 км, увеличив скорость на 15 км/ч. Требуется определить первоначальную скорость,
         с которой двигался поезд.</p>
     <p>Согласно условию задания, при движении поезда с начальной скоростью после задержки путь занял бы на 12 мин
-        больше времени. Изобразим данные на рисунке: <br> <img src="Images/Tasks/6.png"> <br> Обозначим за х начальную скорость.
-        В таком случае: <br> <img src="Images/Tasks/7.png"> <br> Воспользуемся записанной ранее формулой: <br>
-        <img src="Images/Tasks/8.png"> <br> Второй корень является посторонним, так как скорость характеризуется положительной
+        больше времени. Изобразим данные на рисунке: <br> <img src="Data/Images/Tasks/6.png"> <br> Обозначим за х начальную скорость.
+        В таком случае: <br> <img src="Data/Images/Tasks/7.png"> <br> Воспользуемся записанной ранее формулой: <br>
+        <img src="Data/Images/Tasks/8.png"> <br> Второй корень является посторонним, так как скорость характеризуется положительной
         величиной. <br> Ответ: 60 км/ч.</p>
     <p style="color: #ffd230;">Пример 3</p>
     <p style="background: #fff28e;">Попробуем решить еще один пример на движение. Представим, что первый путешественник
@@ -68,23 +68,23 @@
         со вторым. В некой точке В, отмеченной на рисунке, он остановился на отдых, который по времени занял 1,5 ч.
         Обозначим точку, в которой второй путешественник на мотоцикле догнал велосипедиста, буквой D. Определим, что
         на преодоление расстояния АD первому путешественнику потребовалось больше времени на 2,5 ч, так как 4-1,5 = 2,5.
-        <br> <img src="Images/Tasks/9.png"> <br> Обозначим за х путь в км от точки А до точки D. Это расстояние первый
-        путешественник проехал за время: <br> <img src="Images/Tasks/10.png"> <br> Аналогичный путь второй путешественник
-        проехал за время: <br> <img src="Images/Tasks/11.png"> <br> Ответ:56 км.</p>
+        <br> <img src="Data/Images/Tasks/9.png"> <br> Обозначим за х путь в км от точки А до точки D. Это расстояние первый
+        путешественник проехал за время: <br> <img src="Data/Images/Tasks/10.png"> <br> Аналогичный путь второй путешественник
+        проехал за время: <br> <img src="Data/Images/Tasks/11.png"> <br> Ответ:56 км.</p>
     <h2 style="color: #aa21ff;">Движение навстречу друг другу, движение в противоположных направлениях</h2>
     <p style="color: #ffd230;">Пример 4</p>
     <p style="background: #fff28e;">При удалении тел друг от друга их скорость удаления рассчитывается, как сумма
-        скоростей этих тел: <br> <img src="Images/Tasks/12.png"> </p>
+        скоростей этих тел: <br> <img src="Data/Images/Tasks/12.png"> </p>
     <p>Разберем наглядный пример. Пусть из одного города в противоположных направлениях движутся два автомобиля.
         Первая машина едет со скоростью 85 км/ч, а скорость второй составляет 60 км/ч. Попробуем вычислить расстояние,
         на которое будут удалены друг от друга эти автомобили через 2 часа в пути. <br> Получим, что первый автомобиль
         проедет за 2 часа 170 км. Расстояние, которое преодолеет второй автомобиль в течение 2 часов равно 120 км.
         Тогда расстояние между машинами, спустя 2 часа, составит 290 км. <br> Если решать задачу другим способом, то
-        получится, что скорость удаления составит 145 км/ч. Расстояние при этом равно: <br> <img src="Images/Tasks/13.png"> </p>
+        получится, что скорость удаления составит 145 км/ч. Расстояние при этом равно: <br> <img src="Data/Images/Tasks/13.png"> </p>
     <p style="color: #ffd230;">Формула 4</p>
     <p>Время, которое тела провели в пути, удаляясь друг от друга, соответствует преодоленному расстоянию,
-        поделенному на сумму скоростей этих тел:<br> <img src="Images/Tasks/14.png"> <br> <img src="Images/Tasks/15.png"> <br>
-        <img src="Images/Tasks/16.png"></p>
+        поделенному на сумму скоростей этих тел:<br> <img src="Data/Images/Tasks/14.png"> <br> <img src="Data/Images/Tasks/15.png"> <br>
+        <img src="Data/Images/Tasks/16.png"></p>
     <p style="color: #ffd230;">Пример 5</p>
     <p style="background: #fff28e;">Представим, что из разных отправных точек выехали два мотоциклиста. Сначала они
         были удалены друг от друга на расстояние 86 км. Первый мотоциклист ехал со скоростью 90 км/ч. Скорость второго
@@ -98,10 +98,10 @@
         А достиг точки К, спустя 8 часов. На расстояние до точки М объект В потратил 9 ч. Требуется рассчитать
         расстояние МК и скорости, с которыми двигались объекты. <br> Обозначим vА за x (км/ч.), vВ=y(км/ч). Тогда: <br>
         S(КД)=8x(км) <br> S(МД)=9y(км) <br> В таком случае, расстояние от М до D объект А преодолеет за время: <br>
-        t = 9y/x ч <br> Время, которое потребуется для В, чтобы из К прийти в D: <br> tВ =8х/у ч <br> <img src="Images/Tasks/17.png"> <br>
+        t = 9y/x ч <br> Время, которое потребуется для В, чтобы из К прийти в D: <br> tВ =8х/у ч <br> <img src="Data/Images/Tasks/17.png"> <br>
         По условиям задания: <br> 8x – y =12 <br> В связи с тем, что объект А начал свой путь позже на 6 ч, чем
         В, запишем: <br> 8x/y – 9y/x = 6В <br> результате можно составить систему уравнений:
-        <br> <img src="Images/Tasks/18.png"> <br> Тогда путь МК: <br> МК = 8*6 + 9*4 = 84 км <br> Ответ: 84 км; 6 км/ч; 4 км/ч.</p>
+        <br> <img src="Data/Images/Tasks/18.png"> <br> Тогда путь МК: <br> МК = 8*6 + 9*4 = 84 км <br> Ответ: 84 км; 6 км/ч; 4 км/ч.</p>
     <h2 style="color: #aa21ff;">Задачи на скорость сближения</h2>
     <p>При перемещении тел относительно друг друга в распространенных случаях необходимо определить их относительную
         скорость. Величина зависит от условий задачи: <br> -относительная скорость равна сумме скоростей, когда
@@ -115,14 +115,14 @@
         40 км/ч. Встреча двух машин произошла, спустя 1,2 часа после начала пути. Нужно вычислить, на какое расстояние
         удалены друг от друга пункты А и В.</p>
     <p>Логично предположить, что расстояние между точками отправления равно сумме расстояний, которые преодолели
-        автомобили. Первый автомобиль преодолел такой путь: <br> <img src="Images/Tasks/19.png"> <br> Второй автомобиль
-        преодолел такой путь: <br> <img src="Images/Tasks/20.png"> <br> Тогда расстояние между точками составит:
+        автомобили. Первый автомобиль преодолел такой путь: <br> <img src="Data/Images/Tasks/19.png"> <br> Второй автомобиль
+        преодолел такой путь: <br> <img src="Data/Images/Tasks/20.png"> <br> Тогда расстояние между точками составит:
         <br> 72 + 48 = 120 (км) <br> Существует второй способ решения этой задачи, который считается наиболее
         рациональным. В этом случае воспользуемся формулой сложения скоростей: <br> 60 + 40 = 100 (км/ч) <br>
-        Если автомобили сближаются со скоростью 100 км/ч, то расстояние составит: <br> <img src="Images/Tasks/21.png"></p>
+        Если автомобили сближаются со скоростью 100 км/ч, то расстояние составит: <br> <img src="Data/Images/Tasks/21.png"></p>
     <p style="color: #ffd230;">Формула 6</p>
     <p> Когда тела, расстояние между которыми составляет S, движутся навстречу друг другу, они встретятся через время,
-        определяемое по формуле: <br> <img src="Images/Tasks/22.png"></p>
+        определяемое по формуле: <br> <img src="Data/Images/Tasks/22.png"></p>
     <p style="color: #ffd230;">Пример 6</p>
     <p style="background: #fff28e;">Представим, что две точки удалены друг от друга на расстояние 195 км. Из этих
         точек начали встречное движение два автомобиля. Скорость первой машины составила 50 км/ч, второе транспортное
@@ -136,13 +136,13 @@
     <h2 style="color: #aa21ff;">Задачи на движение по течению и против течения</h2>
     <p>При решении задач на движение по течению и против течения следует руководствоваться стандартными формулами.</p>
     <p style="color: #ffd230;">Пример 7</p>
-    <p><img src="Images/Tasks/23.png"></p>
+    <p><img src="Data/Images/Tasks/23.png"></p>
     <p style="color: #ffd230;">Пример 8</p>
-    <p><img src="Images/Tasks/24.png"><br><img src="Images/Tasks/25.png"><br><img src="Images/Tasks/26.png">
-        <br><img src="Images/Tasks/27.png"><br></p>
+    <p><img src="Data/Images/Tasks/24.png"><br><img src="Data/Images/Tasks/25.png"><br><img src="Data/Images/Tasks/26.png">
+        <br><img src="Data/Images/Tasks/27.png"><br></p>
     <p style="color: #ffd230;">Пример 9</p>
-    <p><img src="Images/Tasks/28.png"><br><img src="Images/Tasks/29.png"><br><img src="Images/Tasks/30.png">
-        <br><img src="Images/Tasks/31.png"><br></p>
+    <p><img src="Data/Images/Tasks/28.png"><br><img src="Data/Images/Tasks/29.png"><br><img src="Data/Images/Tasks/30.png">
+        <br><img src="Data/Images/Tasks/31.png"><br></p>
     <p style="color: #ffd230;">Примечание</p>
     <p>В задачах принято называть плотом тело с нулевой собственной скоростью. Таким образом, плот может перемещаться
         лишь по течению и имеет скорость течения.</p>
